--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,520 @@
-* {
+/*  * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  line-height: 1.5;
+  font-size: 18px;
+  letter-spacing: 0.1em;
+  background: url("./assets/images/jaxhomepage.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: var(--light);
+  font-family: "serif";
+}
+
+.topnav {
+  background-color: var(--color-dark);
+  overflow: hidden;
+  border-radius: 8px;
+  position: sticky; top: 0px;
+  z-index: 99;
+}
+
+/* Style the links inside the navigation bar 
+.topnav a { 
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover 
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link 
+.topnav a.active {
+  background-color: (var(--color-light));
+  color: white;
+}
+
+.footer {
+  background: var(--color-light);
+  width: auto;
+  padding: 20px 35px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+*/
+
+
+
+/*@import url("@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');");*/
+
+* > * {
+  font-family: "Poppins", sans-serif;
+}
+
+:root {
+  --color-dark: #151c35;
+  --color-secondary: #464c70;
+  --color-primary: #ee709d;
+  --color-text: #8297e2;
+  --color-light: #ebebfb;
+}
+
+.container {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  padding: 5em;
+}
+
+.board {
+  max-width: 100%;
+  background-color: var(--color-dark);
+  text-align: center;
+  border-radius: 8px;
+  padding: 4em;
+}
+
+.text-light {
+  color: var(--color-light);
+}
+
+.swiper {
+  width: 600px;
+  height: auto;
+}
+
+.swiper .swiper-slide .flex {
+  margin: 3em 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.swiper .swiper-slide .comments {
+  background-color: var(--color-light);
+  padding: 1.5em 2em;
+  width: 50%;
+  border-radius: 5px;
+  font-size: 1.5em;
+  position: relative;
+  margin: 1.5em;
+}
+
+.swiper .swiper-slide .comments::after {
+  content: "";
+  position: absolute;
+  bottom: -19px;
+  left: 45%;
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 20px solid transparent;
+  z-index: -99;
+}
+
+.swiper.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1em;
+}
+
+.flex .swiper .profile img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 5px solid var(--color-primary);
+  margin: 10px 0;
+}
+
+.swiper.profile .swiper .swiper-slide {
+  margin: 3em 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.swiper-pagination {
+  position: initial;
+  text-align: center;
+  transition: 0.3s opacity;
+  transform: translate3d(0, 0, 0);
+  z-index: 10;
+}
+
+.comment-from {
+  color: white;
+  padding: 10px;
+}
+
+body {
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url(../src/assets/images/jaxhomepage.jpg) no-repeat center center fixed;
+    
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.secretbody {
+    background: linear-gradient(
+        rgba(255, 255, 255, 0.5),
+        rgba(255, 255, 255, 0.5)
+      );
+      /*url(/images/jax11.jpg) no-repeat center center fixed;*/
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: var(--color-dark);
+  overflow: hidden;
+  border-radius: 8px;
+  position: sticky; top: 0px;
+  z-index: 99;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a { 
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: (var(--color-light));
+  color: white;
+}
+
+/*--body {
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url("images/jaxhomepage.jpg");
+  background-size: 2900px 1600px;
+  background-repeat: no-repeat;
+}
+--*/
+
+.welcome-page-name {
+  font-family: "Brush Script MT";
+  text-align: center;
+  font-variant: small-caps;
+  color: #34e7e4;
+  font-weight: 600;
+  font-size: 300px;
+  text-shadow: 10px 10px 1px black;
+  vertical-align: middle;
+}
+
+.row {
+  align-content: center;
+  text-align: center;
+}
+
+.button {
+  font-size: 25px;
+  margin: 40px;
+  border-radius: 10px;
+  background-color: whitesmoke;
+  font-family: cursive;
+  cursor: pointer;
+  padding: 10px;
+  background-color: lightskyblue;
+}
+.nav-items {
+  vertical-align: center;
+}
+
+.nav-link-text {
+  text-decoration: none;
+  font-weight: 650;
+  font-size: 40px;
+  color: black;
+  opacity: 1;
+}
+
+.wrapper {
+  font-family: cursive;
+  display: grid;
+  grid-template-columns: 270px 225px;
+  column-gap: 100px;
+  text-align: center;
+  justify-content: space-around;
+  margin: 15rem;
+  row-gap: 50px;
+}
+
+.grid-item {
+  background-color: aliceblue;
+  opacity: 0.75;
+  border-color: black;
+  border-style: groove;
+  border-radius: 8px;
+}
+
+#grid-item-1 {
+    grid-column: 1 ;
+    grid-row: 1;
+}
+
+#grid-item-2 {
+    grid-column: 2 ;
+    grid-row: 1;
+}
+
+#grid-item-3 {
+    grid-column: 1 ;
+    grid-row: 2;
+}
+
+#grid-item-4 {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.grid-item-1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.grid-item-2 {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.grid-item-3 {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.grid-item-4 {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.footer {
+  background: var(--color-light);
+  width: auto;
+  padding: 20px 35px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+/*---Picture page styles---*/
+
+h1 {
+  text-align: center;
+  font-size: 60px;
+  margin-top: 125px;
+}
+
+body {
+  background-color: #eee;
+}
+.hello {
+  opacity: 1 !important;
+}
+.full {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.full .content {
+  background-color: rgba(0, 0, 0, 0.75) !important;
+  height: 100%;
+  width: 100%;
+  display: grid;
+}
+.full .content img {
+  left: 50%;
+  transform: translate3d(0, 0, 0);
+  animation: zoomin 1s ease;
+  max-height: 755px;
+  margin: auto;
+}
+.byebye {
+  opacity: 0;
+}
+.byebye:hover {
+  transform: scale(0.2) !important;
+}
+.gallery {
+  display: grid;
+  grid-column-gap: 60px;
+  grid-row-gap: 60px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: repeat;
+  margin: 130px;
+}
+.gallery img {
+  max-width: 100%;
+  border-radius: 8px;
+  box-shadow: 0 0 16px #333;
+  transition: all 1.5s ease;
+}
+.gallery img:hover {
+  box-shadow: 0 0 32px #333;
+}
+.gallery .content {
+  padding: 4px;
+}
+.gallery .gallery-item {
+  transition: grid-row-start 300ms linear;
+  transition: transform 300ms ease;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+.gallery .gallery-item:hover {
+  transform: scale(1.05);
+}
+@media (max-width: 600px) {
+  .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
+  }
+}
+@media (max-width: 400px) {
+  .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+  }
+}
+@-moz-keyframes zoomin {
+  0% {
+    max-width: 50%;
+    transform: rotate(-30deg);
+    filter: blur(4px);
+  }
+  30% {
+    filter: blur(4px);
+    transform: rotate(-80deg);
+  }
+  70% {
+    max-width: 50%;
+    transform: rotate(45deg);
+  }
+  100% {
+    max-width: 100%;
+    transform: rotate(0deg);
+  }
+}
+@-webkit-keyframes zoomin {
+  0% {
+    max-width: 50%;
+    transform: rotate(-30deg);
+    filter: blur(4px);
+  }
+  30% {
+    filter: blur(4px);
+    transform: rotate(-80deg);
+  }
+  70% {
+    max-width: 50%;
+    transform: rotate(45deg);
+  }
+  100% {
+    max-width: 100%;
+    transform: rotate(0deg);
+  }
+}
+@-o-keyframes zoomin {
+  0% {
+    max-width: 50%;
+    transform: rotate(-30deg);
+    filter: blur(4px);
+  }
+  30% {
+    filter: blur(4px);
+    transform: rotate(-80deg);
+  }
+  70% {
+    max-width: 50%;
+    transform: rotate(45deg);
+  }
+  100% {
+    max-width: 100%;
+    transform: rotate(0deg);
+  }
+}
+@keyframes zoomin {
+  0% {
+    max-width: 50%;
+    transform: rotate(-30deg);
+    filter: blur(4px);
+  }
+  30% {
+    filter: blur(4px);
+    transform: rotate(-80deg);
+  }
+  70% {
+    max-width: 50%;
+    transform: rotate(45deg);
+  }
+  100% {
+    max-width: 100%;
+    transform: rotate(0deg);
+  }
+}
+
+@media (max-width: 600px) {
+  .welcome-page-name {
+    color: red;
+    font-size: 100%;
+  }
+}
+
+
+
+input{
+  font-family: 'Helvetica', serif;
+  width: 100%;
+  font-size: 20px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: none;
+  border-bottom: 2px solid #767474;
+}
+input[type=submit] {
+  font-family: 'Helvetica', serif;
+  width: 100%;
+  background-color: #767474;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  margin: 4px 2px;
+  border-radius: 10px;
 }
